# openapi-viz

./: .gitignore  README.md  openapi-viz.py  pyproject.toml  run_tests.py  viewer_sample.html  viewer_template.html
tests/: test_openapi_viz.py
